--- a/index.html
+++ b/index.html
@@ -1,1 +1,53 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <title>Lennier Mulder</title>
+</head>
+<body>
+    <header>
+        <h1>朱晓瑞</h1>
+    </header>
+    <main>
+        <p>Welcome to my little corner of the internet! This website is under construction.</p>
+    </main>
+    <footer>
+        <p>© 2024 Lennier Mulder</p>
+        <iframe height='454' width='300' frameborder='0' allowtransparency='true' scrolling='no' src='https://www.strava.com/athletes/134681589/latest-rides/1400cf29fec20dcea41557ff8fcaac0fa2b51402'></iframe>
+        <div class="badges">
+            <!-- Anything But Windows -->
+            <img alt="Anything But Window Badge" title="F*** microsoft" src="https://leia.pages.gay/img/badges/anythingbutwindows.gif">
+
+            <!-- uBlock Origin NOW -->
+            <a title="uBlock Origin NOW" referrerpolicy="no-referrer" href="https://github.com/gorhill/uBlock">
+                <img alt="uBlock Origin Badge" src="https://leia.pages.gay/img/badges/ublock.png">
+            </a>
+
+            <!-- Firefox NOW -->
+            <a title="Firefox NOW" referrerpolicy="no-referrer" href="https://firefox.com">
+                <img alt="Firefox Badge" src="https://leia.pages.gay/img/badges/firefox.png">
+            </a>
+
+            <!-- Anything but chrome -->
+            <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/chrome.png" alt="Anything but chrome">
+
+            <!-- LaTeX -->
+            <img src="https://raw.githubusercontent.com/Kirito139/buttons/refs/heads/main/88x31/latex.gif" alt="True nerds type in LaTeX">
+
+            <!-- textfile directory -->
+            <a title="textfile directory" referrerpolicy="no-referrer" href="http://textfiles.com">
+                <img src="https://raw.githubusercontent.com/Kirito139/buttons/refs/heads/main/88x31/textfile.gif" alt="textfiles.com">
+            </a>
+        </div>
+    </footer>
+</body>
+<iframe 
+    src="https://kirito139.github.io/lastfm_now_playing/index.html" 
+    width="220" 
+    height="300" 
+    style="border:none;" 
+    allowtransparency="true">
+</iframe>
+</html>
