Source everything from the stash

--- a/index.html
+++ b/index.html
@@ -8,26 +8,28 @@
 </head>
 <body>
     <header>
-        <h1>朱晓瑞</h1>
+        <h1>Lennier Mulder</h1>
+        <h2>朱晓瑞</h2>
     </header>
     <main>
         <p>Welcome to my little corner of the internet! This website is under construction.</p>
+        <img alt="Under heavy construction" src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/under_construction/pipipelinehalfpipe1038CONSTRUCTION.gif
     </main>
     <footer>
         <p>© 2024 Lennier Mulder</p>
         <iframe height='454' width='300' frameborder='0' allowtransparency='true' scrolling='no' src='https://www.strava.com/athletes/134681589/latest-rides/1400cf29fec20dcea41557ff8fcaac0fa2b51402'></iframe>
         <div class="badges">
             <!-- Anything But Windows -->
-            <img alt="Anything But Window Badge" title="F*** microsoft" src="https://leia.pages.gay/img/badges/anythingbutwindows.gif">
+            <img alt="Anything But Window Badge" title="F*** microsoft" src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/anythingbutwindows.gif">
 
             <!-- uBlock Origin NOW -->
             <a title="uBlock Origin NOW" referrerpolicy="no-referrer" href="https://github.com/gorhill/uBlock">
-                <img alt="uBlock Origin Badge" src="https://leia.pages.gay/img/badges/ublock.png">
+                <img alt="uBlock Origin Badge" src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/ublock.png">
             </a>
 
             <!-- Firefox NOW -->
             <a title="Firefox NOW" referrerpolicy="no-referrer" href="https://firefox.com">
-                <img alt="Firefox Badge" src="https://leia.pages.gay/img/badges/firefox.png">
+                <img alt="Firefox Badge" src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/firefox.png">
             </a>
 
             <!-- Anything but chrome -->
