Add sidebar for widgets.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     </main>
     <footer>
         <p>© 2024 Lennier Mulder</p>
-        <iframe height='454' width='300' frameborder='0' allowtransparency='true' scrolling='no' src='https://www.strava.com/athletes/134681589/latest-rides/1400cf29fec20dcea41557ff8fcaac0fa2b51402'></iframe>
         <div class="badges">
             <!-- Anything But Windows -->
             <img alt="Anything But Window Badge" title="F*** microsoft" src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/anythingbutwindows.gif">
@@ -43,13 +42,19 @@
                 <img src="https://raw.githubusercontent.com/Kirito139/buttons/refs/heads/main/88x31/textfile.gif" alt="textfiles.com">
             </a>
         </div>
+        <div class="sidebar">
+            <!-- Strava widget -->
+            <iframe class="strava-widget" height='454' width='300' frameborder='0' allowtransparency='true' scrolling='no' src='https://www.strava.com/athletes/134681589/latest-rides/1400cf29fec20dcea41557ff8fcaac0fa2b51402'></iframe>
+            <!-- Last.fm Now Playing widget -->
+            <iframe 
+                class="lastfm-widget"
+                src="https://kirito139.github.io/lastfm_now_playing/index.html" 
+                width="220" 
+                height="300" 
+                style="border:none;" 
+                allowtransparency="true">
+            </iframe>
+        </div>
     </footer>
 </body>
-<iframe 
-    src="https://kirito139.github.io/lastfm_now_playing/index.html" 
-    width="220" 
-    height="300" 
-    style="border:none;" 
-    allowtransparency="true">
-</iframe>
 </html>
