--- a/index.html
+++ b/index.html
@@ -7,18 +7,32 @@
     <title>Lennier Mulder</title>
 </head>
 <body>
-    <header>
-        <h1>Lennier Mulder</h1>
-        <h2>朱晓瑞</h2>
-    </header>
-    <main>
-        <p>Welcome to my little corner of the internet! This website is under construction.</p>
-        <img alt="Under heavy construction" src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/under_construction/pipipelinehalfpipe1038CONSTRUCTION.gif">
-    </main>
+    <div class="container">
+        <div class="main-content">
+            <header>
+                <h1>Lennier Mulder</h1>
+                <h2>朱晓瑞</h2>
+            </header>
+            <main>
+                <p>Welcome to my little corner of the internet! This website is under construction.</p>
+                <img alt="Under heavy construction" src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/under_construction/pipipelinehalfpipe1038CONSTRUCTION.gif">
+            </main>
+        </div>
+        <div class="sidebar">
+            <iframe class="strava-widget" height='454' width='300' frameborder='0' allowtransparency='true' scrolling='no' src='https://www.strava.com/athletes/134681589/latest-rides/1400cf29fec20dcea41557ff8fcaac0fa2b51402'></iframe>
+            <iframe 
+                class="lastfm-widget"
+                src="https://kirito139.github.io/lastfm_now_playing/index.html" 
+                width="220" 
+                height="300" 
+                style="border:none;" 
+                allowtransparency="true">
+            </iframe>
+        </div>
+    </div>
     <footer>
         <p>© 2024 Lennier Mulder</p>
-        <div class="badges">
-            <!-- Anything But Windows -->
+        <div class="badges">            <!-- Anything But Windows -->
             <img alt="Anything But Window Badge" title="F*** microsoft" src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/anythingbutwindows.gif">
 
             <!-- uBlock Origin NOW -->
@@ -41,19 +55,6 @@
             <a title="textfile directory" referrerpolicy="no-referrer" href="http://textfiles.com">
                 <img src="https://raw.githubusercontent.com/Kirito139/buttons/refs/heads/main/88x31/textfile.gif" alt="textfiles.com">
             </a>
-        </div>
-        <div class="sidebar">
-            <!-- Strava widget -->
-            <iframe class="strava-widget" height='454' width='300' frameborder='0' allowtransparency='true' scrolling='no' src='https://www.strava.com/athletes/134681589/latest-rides/1400cf29fec20dcea41557ff8fcaac0fa2b51402'></iframe>
-            <!-- Last.fm Now Playing widget -->
-            <iframe 
-                class="lastfm-widget"
-                src="https://kirito139.github.io/lastfm_now_playing/index.html" 
-                width="220" 
-                height="300" 
-                style="border:none;" 
-                allowtransparency="true">
-            </iframe>
         </div>
     </footer>
 </body>
