--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
     </div>
     <footer>
         <p>© 2024 Lennier Mulder</p>
-        <div class="badges">            <!-- Anything But Windows -->
+        <div class="badges">
+            <!-- Anything But Windows -->
             <img alt="Anything But Window Badge" title="F*** microsoft" src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/anythingbutwindows.gif">
 
             <!-- uBlock Origin NOW -->
