Disable scrolling (attempt 2)

--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
                 width="220" 
                 height="310" 
                 style="border:none;" 
-                allowtransparency="true">
-            </iframe>
+                allowtransparency="true"
+                scrolling="no"
+            ></iframe>
         </div>
     </div>
     <footer>
