--- a/index.html
+++ b/index.html
@@ -59,5 +59,15 @@
             </a>
         </div>
     </footer>
+    <div id="changelog">
+        <div id="changelog-toggle">Changelog</div>
+        <div id="changelog-content">
+            <h3>Changelog</h3>
+            <ul>
+                <li>[v0.1.0] - October 27, 2024: Added styles.css, changelog, buttons, construction sign, strava and lastfm widgets, name, welcome message. </li>
+                <li>[v0.0.1] - September 29, 2024: Added index.html, site first deployed to github pages with "Hello world!" message.</li>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
