--- a/index.html
+++ b/index.html
@@ -59,9 +59,10 @@
             </a>
         </div>
     </footer>
-    <div id="changelog">
-        <div id="changelog-toggle">Changelog</div>
-        <div id="changelog-content">
+    <input type="checkbox" id="changelog-toggle" class="changelog-toggle">
+    <div class="changelog">
+        <label for="changelog-toggle" class="changelog-button">Changelog</label>
+        <div class="changelog-content">
             <h3>Changelog</h3>
             <ul>
                 <li>[v0.1.0] - October 27, 2024: Added styles.css, changelog, buttons, construction sign, strava and lastfm widgets, name, welcome message. </li>
