--- a/index.html
+++ b/index.html
@@ -57,6 +57,50 @@
             <a title="textfile directory" referrerpolicy="no-referrer" href="http://textfiles.com">
                 <img src="https://raw.githubusercontent.com/Kirito139/buttons/refs/heads/main/88x31/textfile.gif" alt="textfiles.com">
             </a>
+
+            <!-- Questionable Content -->
+            <a title="Questionable Content" referrerpolicy="no-referrer" href="https://www.questionablecontent.net">
+                <img src="https://raw.githubusercontent.com/Kirito139/buttons/refs/heads/main/88x31/Tokyo_Teahouse_2932_buttons_questionablecontent.gif" alt="Questionable Content">
+            </a>
+
+            <!-- Calvin & Hobbes -->
+            <img src="https://raw.githubusercontent.com/Kirito139/buttons/refs/heads/main/88x31/claymatecarly_calvin.gif" alt="Calvin & Hobbes">
+
+            <!-- Vim -->
+            <a title="Vim" referrerpolicy="no-referrer" href="https://vim.org">
+                <img src="https://raw.githubusercontent.com/Kirito139/buttons/refs/heads/main/88x31/vim.vialle.love.anim.gif" alt="Vim">
+            </a>
+
+            <!-- Fight Google -->
+            <img src="https://raw.githubusercontent.com/Kirito139/buttons/refs/heads/main/88x31/google_stand.gif" alt="Fight Google">
+
+            <!-- DHMO -->
+            <a title="DHMO" referrerpolicy="no-referrer" href="https://dhmo.org">
+                <img src="https://raw.githubusercontent.com/Kirito139/buttons/refs/heads/main/88x31/dhmobanner1.gif" alt="DHMO">
+            </a>
+            
+            <!-- Star Wars Fanatic -->
+            <img src="https://raw.githubusercontent.com/Kirito139/buttons/refs/heads/main/88x31/Area51_Cavern_3008_swfanatic.gif" alt="Star Wars!">
+
+            <!-- Atheist -->
+            <img src="https://raw.githubusercontent.com/Kirito139/buttons/refs/heads/main/88x31/Area51_Cavern_1263_tna3.gif" alt="Atheist">
+
+            <!-- Internet Archive -->
+            <a title="Internet Archive" referrerpolicy="no-referrer" href="https://archive.org">
+                <img src="https://raw.githubusercontent.com/Kirito139/buttons/refs/heads/main/88x31/preserve.gif" alt="archive.org">
+            </a>
+
+            <!-- Made on a Mac -->
+            <img src="https://raw.githubusercontent.com/Kirito139/buttons/refs/heads/main/88x31/macbutton.gif" alt="Made on a Mac">
+
+            <!-- It just works -->
+            <img src="https://raw.githubusercontent.com/Kirito139/buttons/refs/heads/main/88x31/mac-works.gif" alt="It just works">
+
+            <!-- css -->
+            <img src="https://raw.githubusercontent.com/Kirito139/buttons/refs/heads/main/88x31/css.gif" alt="css">
+
+            <!-- Made with Macintosh -->
+            <img src="https://raw.githubusercontent.com/Kirito139/buttons/refs/heads/main/88x31/41383.gif" alt="Made with Macintosh">
         </div>
     </footer>
     <input type="checkbox" id="changelog-toggle" class="changelog-toggle">
@@ -65,6 +109,7 @@
         <div class="changelog-content">
             <h3>Changelog</h3>
             <ul>
+                <li>[v0.1.1] - October 28, 2024: Moar buttons!</li>
                 <li>[v0.1.0] - October 27, 2024: Added styles.css, changelog, buttons, construction sign, strava and lastfm widgets, name, welcome message. </li>
                 <li>[v0.0.1] - September 29, 2024: Added index.html, site first deployed to github pages with "Hello world!" message.</li>
             </ul>
