Fix broken vim link.

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <img src="https://raw.githubusercontent.com/Kirito139/buttons/refs/heads/main/88x31/claymatecarly_calvin.gif" alt="Calvin & Hobbes">
 
             <!-- Vim -->
-            <a title="Vim" referrerpolicy="no-referrer" href="https://vim.org">
+            <a title="Vim" referrerpolicy="no-referrer" href="https://www.vim.org">
                 <img src="https://raw.githubusercontent.com/Kirito139/buttons/refs/heads/main/88x31/vim.vialle.love.anim.gif" alt="Vim">
             </a>
 
