--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                 <h2>朱晓瑞</h2>
             </header>
             <main>
+                <p>Email: lenniermulder [at] icloud [dot] com</p>
                 <p>Welcome to my little corner of the internet! This website is under construction.</p>
                 <img alt="Under heavy construction" src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/under_construction/pipipelinehalfpipe1038CONSTRUCTION.gif">
             </main>
@@ -32,7 +33,6 @@
         </div>
     </div>
     <footer>
-        <p>© 2024 Lennier Mulder</p>
         <div class="badges">
             <!-- Anything But Windows -->
             <img alt="Anything But Window Badge" title="F*** microsoft" src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/anythingbutwindows.gif">
@@ -78,7 +78,7 @@
             <a title="DHMO" referrerpolicy="no-referrer" href="https://dhmo.org">
                 <img src="https://raw.githubusercontent.com/Kirito139/buttons/refs/heads/main/88x31/dhmobanner1.gif" alt="DHMO">
             </a>
-            
+
             <!-- Star Wars Fanatic -->
             <img src="https://raw.githubusercontent.com/Kirito139/buttons/refs/heads/main/88x31/Area51_Cavern_3008_swfanatic.gif" alt="Star Wars!">
 
@@ -102,18 +102,7 @@
             <!-- Made with Macintosh -->
             <img src="https://raw.githubusercontent.com/Kirito139/buttons/refs/heads/main/88x31/41383.gif" alt="Made with Macintosh">
         </div>
+        <p>© 2024 Lennier Mulder · <a href="changelog.html" style="color: inherit; text-decoration: none; display: inline-block;">Changelog</a></p>
     </footer>
-    <input type="checkbox" id="changelog-toggle" class="changelog-toggle">
-    <div class="changelog">
-        <label for="changelog-toggle" class="changelog-button">Changelog</label>
-        <div class="changelog-content">
-            <h3>Changelog</h3>
-            <ul>
-                <li>[v0.1.1] - October 28, 2024: Moar buttons!</li>
-                <li>[v0.1.0] - October 27, 2024: Added styles.css, changelog, buttons, construction sign, strava and lastfm widgets, name, welcome message. </li>
-                <li>[v0.0.1] - September 29, 2024: Added index.html, site first deployed to github pages with "Hello world!" message.</li>
-            </ul>
-        </div>
-    </div>
 </body>
 </html>
