--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
             </a>
 
             <!-- Anything but chrome -->
-            <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/chrome.png" alt="Anything but chrome">
+            <a title="Anything but chrome" referrerpolicy="no-referrer" href="https://contrachrome.com/">
+                <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/chrome.png" alt="Anything but chrome">
+            </a>
 
             <!-- LaTeX -->
             <img src="https://raw.githubusercontent.com/Kirito139/buttons/refs/heads/main/88x31/latex.gif" alt="True nerds type in LaTeX">
