--- a/changelog.html
+++ b/changelog.html
@@ -7,7 +7,7 @@
     <body>
         <pre style="word-wrap: break-word; white-space: pre-wrap;"># Changelog
 
-            [v0.1.2] - October 29, 2024: Added email.
+            [v0.1.2] - October 29, 2024: Added email, contrachrome.
             [v0.1.1] - October 28, 2024: Moar buttons!
             [v0.1.0] - October 27, 2024: Added styles.css, changelog, buttons, construction sign, strava and lastfm widgets, name, welcome message.
             [v0.0.1] - September 29, 2024: Added index.html, site first deployed to github pages with "Hello world!" message.
