prevent lastm collapsing

--- a/index.html
+++ b/index.html
@@ -15,25 +15,46 @@
             </header>
             <main>
                 <p>Email: lenniermulder [at] icloud [dot] com</p>
-                <p>Welcome to my little corner of the internet! This website is under construction.</p>
+                <p>Welcome to my little corner of the internet! I should probably put something here... but I don't know what.</p>
+                <pre>
+Geek Code v3.12: GU d- s:- a?(---) C++ U+>++++ P L>+ E--- W++ N o? K w--- O? M++ V? PS++ PE- Y+ PGP? t 5 X?>+ R>+ tv+ b+>+++ DI(+) D+ G e- h! !r y
+                </pre>
                 <img alt="Under heavy construction" src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/under_construction/pipipelinehalfpipe1038CONSTRUCTION.gif">
             </main>
         </div>
         <div class="sidebar">
-            <iframe class="strava-widget" height='454' width='300' frameborder='0' allowtransparency='true' scrolling='no' src='https://www.strava.com/athletes/134681589/latest-rides/1400cf29fec20dcea41557ff8fcaac0fa2b51402'></iframe>
-            <iframe 
-                class="lastfm-widget"
-                src="https://kirito139.github.io/lastfm_now_playing/index.html" 
-                width="220" 
-                height="350" 
-                style="border:none;" 
-                allowtransparency="true"
-                scrolling="no"
-            ></iframe>
+            <iframe class="strava-widget"
+                    height='454'
+                    width='300'
+                    frameborder='0'
+                    allowtransparency='true'
+                    scrolling='no'
+                    src='https://www.strava.com/athletes/134681589/latest-rides/1400cf29fec20dcea41557ff8fcaac0fa2b51402'>
+            </iframe>
+            <iframe class="lastfm-widget"
+                    src="https://kirito139.github.io/lastfm_now_playing/index.html" 
+                    allowtransparency="true"
+                    scrolling="no"
+                    width="220"
+                    height= 100%
+                    style="border:none;">
+            </iframe>
         </div>
     </div>
     <footer>
-        <div class="badges">
+        <!-- <p>Webrings! SURF THEM!!!</p>
+        <div class="webrings">
+        < !-- Geekring widget #3 - 88x31 px banner by wirlaburla -- >
+            <map name="badge-geekring">
+                <area shape="rect" coords="4,3,13,28" href="http://geekring.net/site/NUMBER/previous" alt="Previous">
+                <area shape="rect" coords="13,3,22,28" href="http://geekring.net/site/NUMBER/random" alt="Random">
+                <area shape="rect" coords="76,3,84,28" href="http://geekring.net/site/NUMBER/next" alt="Next">
+                <area shape="rect" coords="23,3,63,28" href="https://geekring.net/" alt="Geekring">
+           </map>
+           <img usemap="#badge-geekring" src="http://geekring.net/banner/geek_2.gif" alt="The Geekring">
+        </div> -->
+        <p>Buttons! CLICK THEM!!!</p>
+        <div class="88x31">
             <!-- Anything But Windows -->
             <img alt="Anything But Window Badge" title="F*** microsoft" src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/anythingbutwindows.gif">
 
