--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Geek Code v3.12: GU d- s:- a?(---) C++ U+>++++ P L>+ E--- W++ N o? K w--- O? M++
                     allowtransparency="true"
                     scrolling="no"
                     width="220"
-                    height= 100%
+                    height="340"
                     style="border:none;">
             </iframe>
         </div>
