Add Hack Club webring

--- a/index.html
+++ b/index.html
@@ -42,9 +42,14 @@ Geek Code v3.12: GU d- s:- a?(---) C++ U+>++++ P L>+ E--- W++ N o? K w--- O? M++
         </div>
     </div>
     <footer>
-        <!-- <p>Webrings! SURF THEM!!!</p>
-        <div class="webrings">
-        < !-- Geekring widget #3 - 88x31 px banner by wirlaburla -- >
+        <p>Webrings! SURF THEM!!!</p>
+        <div id="webring-wrapper">
+            <a href="https://webring.hackclub.com/" id="previousBtn" class="webring-anchor" title="Previous">‹</a>
+            <a href="https://webring.hackclub.com/" class="webring-logo" title="Hack Club Webring" alt="Hack Club Webring"></a>
+            <a href="https://webring.hackclub.com/" id="nextBtn" class="webring-anchor" title="Next">›</a>
+            <script src="https://webring.hackclub.com/embed.min.js"></script>
+        </div>
+        <!-- Geekring widget #3 - 88x31 px banner by wirlaburla -- >
             <map name="badge-geekring">
                 <area shape="rect" coords="4,3,13,28" href="http://geekring.net/site/NUMBER/previous" alt="Previous">
                 <area shape="rect" coords="13,3,22,28" href="http://geekring.net/site/NUMBER/random" alt="Random">
