--- a/changelog.html
+++ b/changelog.html
@@ -7,7 +7,7 @@
     <body>
         <pre style="word-wrap: break-word; white-space: pre-wrap;"># Changelog
 
-            [v0.1.3] - October 30, 2024: Fixed sizing bugs with strava and lastfm widgets, added hackclub webring, added geek code, added hack club spooky boba manor.
+            [v0.1.3] - October 30, 2024: Fixed sizing bugs with strava and lastfm widgets, added hackclub webring, added geek code, added hack club spooky boba manor. Also added neko!
             [v0.1.2] - October 29, 2024: Added email, contrachrome.
             [v0.1.1] - October 28, 2024: Moar buttons!
             [v0.1.0] - October 27, 2024: Added styles.css, changelog, buttons, construction sign, strava and lastfm widgets, name, welcome message.
