--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Lennier Mulder</title>
 </head>
 <body>
+    <script>NekoType="spooky"</script>
+    <h1 id=nl><script src="https://webneko.net/n20171213.js"></script><a 
+href="https://webneko.net">Neko</a></h1>
     <div class="container">
         <div class="main-content">
             <header>
