--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Lennier Mulder</title>
 </head>
 <body>
-    <script>NekoType="spooky"</script>
+    <script>NekoType="holiday"</script>
     <h1 id=nl><script src="https://webneko.net/n20171213.js"></script><a 
 href="https://webneko.net">Neko</a></h1>
     <div class="container">
@@ -20,7 +20,7 @@ href="https://webneko.net">Neko</a></h1>
                 <img alt="Under heavy construction" src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/under_construction/pipipelinehalfpipe1038CONSTRUCTION.gif">
                 <p>Email: lenniermulder [at] icloud [dot] com</p>
                 <p>Geek Code v3.12: GU d- s:- a?(---) C++ U+>++++ P L>+ E--- W++ N o? K w--- O? M++ V? PS++ PE- Y+ PGP? t 5 X?>+ R>+ tv+ b+>+++ DI(+) D+ G e- h! !r y</p>
-                <p>Welcome to my little corner of the internet! I should probably put something here... but I don't know what.</p>
+                <p>Welcome to my little corner of the internet! I should probably put something more here... but I don't know what.</p>
                 <a href="https://hack.club/boba-manor" style="color: inherit; text-decoration: none; display: inline-block;">For now, Open the Door...</a>
                 <p><a href="https://hack.club/boba-manor"> <img alt="Enter if you dare" src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/images/spooky-dark-theme_854605-5472.avif"></a></p>
             </main>
