Christmas theme, more buttons.

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ href="https://webneko.net">Neko</a></h1>
         </div>
     </div>
     <footer>
-        <p>Webrings! SURF THEM!!!</p>
+        <p>Webrings!</p>
         <div id="webring-wrapper">
             <a href="https://webring.hackclub.com/" id="previousBtn" class="webring-anchor" title="Previous">‹</a>
             <a href="https://webring.hackclub.com/" class="webring-logo" title="Hack Club Webring" alt="Hack Club Webring"></a>
@@ -61,7 +61,7 @@ href="https://webneko.net">Neko</a></h1>
            </map>
            <img usemap="#badge-geekring" src="http://geekring.net/banner/geek_2.gif" alt="The Geekring">
         </div> -->
-        <p>Buttons! CLICK THEM!!!</p>
+        <p>Buttons!</p>
         <div class="88x31">
             <!-- Anything But Windows -->
             <img alt="Anything But Window Badge" title="F*** microsoft" src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/anythingbutwindows.gif">
@@ -132,8 +132,65 @@ href="https://webneko.net">Neko</a></h1>
 
             <!-- Made with Macintosh -->
             <img src="https://raw.githubusercontent.com/Kirito139/buttons/refs/heads/main/88x31/41383.gif" alt="Made with Macintosh">
-        </div>
-        <p>© 2024 Lennier Mulder · <a href="changelog.html" style="color: inherit; text-decoration: none; display: inline-block;">Changelog</a></p>
+
+            <!-- 88x31 -->
+            <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/88x31.png" alt="88x31">
+
+            <!-- chrome is evil -->
+            <a title="Anything but chrome" referrerpolicy="no-referrer" href="https://contrachrome.com/">
+                <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/chrome2.gif" alt="Google Chrome is EVIL!">
+            </a>
+
+            <!-- get a computer now -->
+            <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/computer.png" alt="Get a computer NOW!">
+
+            <!-- DOOM -->
+            <a title="DOOM" referrerpolicy="no-referrer" href="https://playclassic.games/games/first-person-shooter-dos-games-online/play-doom-online/play/">
+                <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/doom.png" alt="Play DOOM!">
+            </a>
+
+            <!-- Best viewed with eyes -->
+            <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/eyes.gif" alt="Best viewed with eyes!">
+
+            <!-- I like computer -->
+            <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/ilikecomputer.png" alt="I like computer">
+
+            <!-- Internet archive -->
+            <a title="Internet Archive" referrerpolicy="no-referrer" href="https://archive.org">
+                <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/internetarchive.png" alt="Internet Archive">
+            </a>
+
+            <!-- Internet privacy NOW! -->
+            <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/internetprivacy.gif" alt="Internet privacy NOW!">
+
+            <!-- phone chump -->
+            <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/phonechump.gif" alt="Don't be a phone chump. Get a computer NOW!">
+
+            <!-- ruffle -->
+            <a title="Ruffle" referrerpolicy="no-referrer" href="https://ruffle.rs">
+                <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/ruffle.png" alt="Ruffle">
+            </a>
+
+            <!--  same shit different asshole -->
+            <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/sameshit.gif" alt="Same shit different asshole">
+
+            <!-- spotify -->
+            <a title="Reasons apple music is better" referrerpolicy="no-referrer" href="https://techpenny.com/reasons-apple-music-better-than-spotify/">
+                <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/shitify.gif" alt="Get Apple Music instead!">
+            </a>
+
+            <!-- delete tiktok -->
+            <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/tiktok.gif" alt="Delete tiktok">
+
+            <!-- Windows NO! -->
+            <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/windows.png" alt="Windows NO!">
+
+            <!-- xkcd -->
+            <a title="xkcd" referrerpolicy="no-referrer" href="https://xkcd.com">
+                <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/xkcd.png" alt="xkcd">
+            </a>
+
+        </div> <p>© 2024 Lennier Mulder · <a href="changelog.html" style="color: inherit; text-decoration: none; display: inline-block;">Changelog</a></p>
     </footer>
 </body>
 </html>
