--- a/changelog.html
+++ b/changelog.html
@@ -7,6 +7,7 @@
     <body>
         <pre style="word-wrap: break-word; white-space: pre-wrap;"># Changelog
 
+            [v0.1.4] - November 2, 2024: Christmas Neko and colorscheme. More buttons!
             [v0.1.3] - October 30, 2024: Fixed sizing bugs with strava and lastfm widgets, added hackclub webring, added geek code, added hack club spooky boba manor. Also added neko!
             [v0.1.2] - October 29, 2024: Added email, contrachrome.
             [v0.1.1] - October 28, 2024: Moar buttons!
