Add geekring button.

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ href="https://webneko.net">Neko</a></h1>
             <a href="https://webring.hackclub.com/" id="nextBtn" class="webring-anchor" title="Next">›</a>
             <script src="https://webring.hackclub.com/embed.min.js"></script>
         </div>
-        <!-- Geekring widget #3 - 88x31 px banner by wirlaburla -- >
+        <!-- Geekring widget #3 - 88x31 px banner by wirlaburla -->
             <map name="badge-geekring">
                 <area shape="rect" coords="4,3,13,28" href="http://geekring.net/site/NUMBER/previous" alt="Previous">
                 <area shape="rect" coords="13,3,22,28" href="http://geekring.net/site/NUMBER/random" alt="Random">
@@ -60,7 +60,7 @@ href="https://webneko.net">Neko</a></h1>
                 <area shape="rect" coords="23,3,63,28" href="https://geekring.net/" alt="Geekring">
            </map>
            <img usemap="#badge-geekring" src="http://geekring.net/banner/geek_2.gif" alt="The Geekring">
-        </div> -->
+        </div>
         <p>Buttons!</p>
         <div class="88x31">
             <!-- Anything But Windows -->
