Remove boba mansion

--- a/index.html
+++ b/index.html
@@ -1,28 +1,28 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Lennier Mulder</title>
+    <title>lennier mulder</title>
 </head>
 <body>
-    <script>NekoType="holiday"</script>
+    <script>nekotype="holiday"</script>
     <h1 id=nl><script src="https://webneko.net/n20171213.js"></script><a 
-href="https://webneko.net">Neko</a></h1>
+href="https://webneko.net">neko</a></h1>
     <div class="container">
         <div class="main-content">
             <header>
-                <h1>Lennier Mulder</h1>
+                <h1>lennier mulder</h1>
                 <h2>朱晓瑞</h2>
             </header>
             <main>
-                <img alt="Under heavy construction" src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/under_construction/pipipelinehalfpipe1038CONSTRUCTION.gif">
-                <p>Email: lenniermulder [at] icloud [dot] com</p>
-                <p>Geek Code v3.12: GU d- s:- a?(---) C++ U+>++++ P L>+ E--- W++ N o? K w--- O? M++ V? PS++ PE- Y+ PGP? t 5 X?>+ R>+ tv+ b+>+++ DI(+) D+ G e- h! !r y</p>
-                <p>Welcome to my little corner of the internet! I should probably put something more here... but I don't know what.</p>
-                <a href="https://hack.club/boba-manor" style="color: inherit; text-decoration: none; display: inline-block;">For now, Open the Door...</a>
-                <p><a href="https://hack.club/boba-manor"> <img alt="Enter if you dare" src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/images/spooky-dark-theme_854605-5472.avif"></a></p>
+                <img alt="under heavy construction" src="https://raw.githubusercontent.com/kirito139/stash/refs/heads/main/under_construction/pipipelinehalfpipe1038construction.gif">
+                <p>email: lenniermulder [at] icloud [dot] com</p>
+                <p>geek code v3.12: gu d- s:- a?(---) c++ u+>++++ p l>+ e--- w++ n o? k w--- o? m++ v? ps++ pe- y+ pgp? t 5 x?>+ r>+ tv+ b+>+++ di(+) d+ g e- h! !r y</p>
+                <p>welcome to my little corner of the internet! i should probably put something more here... but i don't know what.</p>
+                <!-- <a href="https://hack.club/boba-manor" style="color: inherit; text-decoration: none; display: inline-block;">for now, open the door...</a>
+                <p><a href="https://hack.club/boba-manor"> <img alt="Enter if you dare" src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/images/spooky-dark-theme_854605-5472.avif"></a></p> -->
             </main>
         </div>
         <div class="sidebar">
