--- a/changelog.html
+++ b/changelog.html
@@ -5,14 +5,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <pre style="word-wrap: break-word; white-space: pre-wrap;"># Changelog
-
-            [v0.1.4] - November 2, 2024: Christmas Neko and colorscheme. More buttons!
-            [v0.1.3] - October 30, 2024: Fixed sizing bugs with strava and lastfm widgets, added hackclub webring, added geek code, added hack club spooky boba manor. Also added neko!
-            [v0.1.2] - October 29, 2024: Added email, contrachrome.
-            [v0.1.1] - October 28, 2024: Moar buttons!
-            [v0.1.0] - October 27, 2024: Added styles.css, changelog, buttons, construction sign, strava and lastfm widgets, name, welcome message.
-            [v0.0.1] - September 29, 2024: Added index.html, site first deployed to github pages with "Hello world!" message.
+        <pre style="word-wrap: break-word; white-space: pre-wrap;">
+        # Changelog
+        [v0.1.5] - November 3, 2024: Removed boba manor, added geekring button.
+        [v0.1.4] - November 2, 2024: Christmas Neko and colorscheme. More buttons!
+        [v0.1.3] - October 30, 2024: Fixed sizing bugs with strava and lastfm widgets, added hackclub webring, added geek code, added hack club spooky boba manor. Also added neko!
+        [v0.1.2] - October 29, 2024: Added email, contrachrome.
+        [v0.1.1] - October 28, 2024: Moar buttons!
+        [v0.1.0] - October 27, 2024: Added styles.css, changelog, buttons, construction sign, strava and lastfm widgets, name, welcome message.
+        [v0.0.1] - September 29, 2024: Added index.html, site first deployed to github pages with "Hello world!" message.
         </pre>
     </body>
 </html>
