--- a/index.html
+++ b/index.html
@@ -1,27 +1,27 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>lennier mulder</title>
+    <title>Lennier Mulder</title>
 </head>
 <body>
-    <script>nekotype="holiday"</script>
+    <script>NekoType="holiday"</script>
     <h1 id=nl><script src="https://webneko.net/n20171213.js"></script><a 
-href="https://webneko.net">neko</a></h1>
+href="https://webneko.net">Neko</a></h1>
     <div class="container">
         <div class="main-content">
             <header>
-                <h1>lennier mulder</h1>
+                <h1>Lennier Mulder</h1>
                 <h2>朱晓瑞</h2>
             </header>
             <main>
-                <img alt="under heavy construction" src="https://raw.githubusercontent.com/kirito139/stash/refs/heads/main/under_construction/pipipelinehalfpipe1038construction.gif">
-                <p>email: lenniermulder [at] icloud [dot] com</p>
-                <p>geek code v3.12: gu d- s:- a?(---) c++ u+>++++ p l>+ e--- w++ n o? k w--- o? m++ v? ps++ pe- y+ pgp? t 5 x?>+ r>+ tv+ b+>+++ di(+) d+ g e- h! !r y</p>
-                <p>welcome to my little corner of the internet! i should probably put something more here... but i don't know what.</p>
-                <!-- <a href="https://hack.club/boba-manor" style="color: inherit; text-decoration: none; display: inline-block;">for now, open the door...</a>
+                <img alt="Under heavy construction" src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/under_construction/pipipelinehalfpipe1038CONSTRUCTION.gif">
+                <p>Email: lenniermulder [at] icloud [dot] com</p>
+                <p>Geek Code v3.12: GU d- s:- a?(---) C++ U+>++++ P L>+ E--- W++ N o? K w--- O? M++ V? PS++ PE- Y+ PGP? t 5 X?>+ R>+ tv+ b+>+++ DI(+) D+ G e- h! !r y</p>
+                <p>Welcome to my little corner of the internet! I should probably put something more here... but I don't know what.</p>
+                <!-- <a href="https://hack.club/boba-manor" style="color: inherit; text-decoration: none; display: inline-block;">For now, Open the Door...</a>
                 <p><a href="https://hack.club/boba-manor"> <img alt="Enter if you dare" src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/images/spooky-dark-theme_854605-5472.avif"></a></p> -->
             </main>
         </div>
@@ -51,14 +51,15 @@ href="https://webneko.net">neko</a></h1>
             <a href="https://webring.hackclub.com/" class="webring-logo" title="Hack Club Webring" alt="Hack Club Webring"></a>
             <a href="https://webring.hackclub.com/" id="nextBtn" class="webring-anchor" title="Next">›</a>
             <script src="https://webring.hackclub.com/embed.min.js"></script>
-        </div>
-        <!-- Geekring widget #3 - 88x31 px banner by wirlaburla -->
+            <!-- Geekring widget #3 - 88x31 px banner by wirlaburla -->
+            <p>
             <map name="badge-geekring">
                 <area shape="rect" coords="4,3,13,28" href="http://geekring.net/site/NUMBER/previous" alt="Previous">
                 <area shape="rect" coords="13,3,22,28" href="http://geekring.net/site/NUMBER/random" alt="Random">
                 <area shape="rect" coords="76,3,84,28" href="http://geekring.net/site/NUMBER/next" alt="Next">
                 <area shape="rect" coords="23,3,63,28" href="https://geekring.net/" alt="Geekring">
-           </map>
+            </map>
+            </p>
            <img usemap="#badge-geekring" src="http://geekring.net/banner/geek_2.gif" alt="The Geekring">
         </div>
         <p>Buttons!</p>
