Smilies, retro theming, bitmap fonts oh my

--- a/changelog.html
+++ b/changelog.html
@@ -7,7 +7,7 @@
     <body>
         <pre style="word-wrap: break-word; white-space: pre-wrap;">
         # Changelog
-        [v0.1.5] - November 3, 2024: Removed boba manor, added geekring button.
+        [v0.1.5] - November 3, 2024: Removed boba manor, added geekring button. Changed to green retro terminal inspired colorscheme but left passable christams colors in comments in case I ever want to switch back. Added night before implementation poem, changed english header font to Terminess Nerd Font and chinese header font to Zpix, body font to ProggyClean Nerd Font, pre font to GohuFont uni11 Nerd Font(currently just the night before implementation poem uses this) and footer font to Silkscreen. Also added a smilies emoticon, and moved underconstruction sign to right before poem, after about me.
         [v0.1.4] - November 2, 2024: Christmas Neko and colorscheme. More buttons!
         [v0.1.3] - October 30, 2024: Fixed sizing bugs with strava and lastfm widgets, added hackclub webring, added geek code, added hack club spooky boba manor. Also added neko!
         [v0.1.2] - October 29, 2024: Added email, contrachrome.
