--- a/index.html
+++ b/index.html
@@ -14,14 +14,69 @@ href="https://webneko.net">Neko</a></h1>
         <div class="main-content">
             <header>
                 <h1>Lennier Mulder</h1>
-                <h2>朱晓瑞</h2>
+                <p style = "font-size: 22px;">朱晓瑞</p>
             </header>
             <main>
-                <img alt="Under heavy construction" src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/under_construction/pipipelinehalfpipe1038CONSTRUCTION.gif">
+                <p>Kirito139 · roguewielder</p>
+                <p>San Francisco, CA<p>
                 <p>Email: lenniermulder [at] icloud [dot] com</p>
-                <p>Geek Code v3.12: GU d- s:- a?(---) C++ U+>++++ P L>+ E--- W++ N o? K w--- O? M++ V? PS++ PE- Y+ PGP? t 5 X?>+ R>+ tv+ b+>+++ DI(+) D+ G e- h! !r y</p>
-                <p>Welcome to my little corner of the internet! I should probably put something more here... but I don't know what.</p>
-                <!-- <a href="https://hack.club/boba-manor" style="color: inherit; text-decoration: none; display: inline-block;">For now, Open the Door...</a>
+        <p>Geek Code v3.12: GU d- s:- a?(---) C++ U+>++++ P L>+ E--- W++ N o? K w--- O? M++ V? PS++ PE- Y+ PGP? t 5 X?>+ R>+ tv+ b+>+++ DI(+) D+ G e- h! !r y</p>
+                <p>Welcome to my little corner of the internet! Feel free to look around, it's pretty empty right now but I'll probably add more... eventually. This site was made with the help of a large dose of procrastination.</p>
+                <p> About me: I'm a sophomore at Lowell HS, and I run on the XC/TF teams (though I'm currently dealing with shin splints <img style="display: inline;" alt="sigh" src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/smilies/purple_sigh.gif"> ). I code in python (preferred) and java.</p>
+                <img alt="Under heavy construction" src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/under_construction/pipipelinehalfpipe1038CONSTRUCTION.gif">
+                <pre>
+'TWAS THE NIGHT BEFORE IMPLEMENTATION
+author unkown
+
+'Twas the night before implementation and all through the house
+not a system was working, not even the mouse.
+
+The programmers hung by their tubes in despair
+in hopes that a miracle soon would be there.
+
+The users were nestled all snug in their beds
+while visions of transactions danced in their heads.
+
+When out of the Monitor came such a clatter
+I sprang from my desk to see what was the matter.
+
+And what to my wondering eyes should appear,
+but a guru programmer (with a sixpack of beer).
+
+His resume glowed with experience so rare,
+and he turned out great code with a bit-pusher's flair.
+
+More rapid than eagles, his programs they came,
+as he whistled and shouted and called them by name.
+
+On Update! On Inquiry! On OOP! On Delete!
+On Sequel! On Timeout! On Methods Complete!
+
+His eyes were glazed over; fingers nimble and lean
+from weekends and nights in front of a screen.
+
+A wink of his eye and a twist of his head,
+soon gave me to know I had nothing to dread.
+
+He spoke not a word, but went straight to his work,
+turning specs into code; then he turned with a jerk.
+
+And laying his finger upon the RUN keys
+the system came up and it worked PERFECTLY!
+
+The Updates updated; Deletes they deleted;
+The Inquiries inquired and Closing completed.
+
+He tested each whistle, and tested each bell
+with nary an edit, for all had gone well.
+
+The system was finished, the tests were concluded,
+the clients last changes were even included.
+
+And the client exclaimed with a snarl and a taunt
+'IT'S JUST WHAT I ASKED FOR---BUT NOT WHAT I WANT!'
+                </pre>
+                <!-- Boba Manor: <a href="https://hack.club/boba-manor" style="color: inherit; text-decoration: none; display: inline-block;">For now, Open the Door...</a>
                 <p><a href="https://hack.club/boba-manor"> <img alt="Enter if you dare" src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/images/spooky-dark-theme_854605-5472.avif"></a></p> -->
             </main>
         </div>
@@ -191,7 +246,9 @@ href="https://webneko.net">Neko</a></h1>
                 <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/xkcd.png" alt="xkcd">
             </a>
 
-        </div> <p>© 2024 Lennier Mulder · <a href="changelog.html" style="color: inherit; text-decoration: none; display: inline-block;">Changelog</a></p>
+        </div>
+        <p>© 2024 Lennier Mulder · <a href="changelog.html" style="color: inherit; text-decoration: none; display: inline-block;">Changelog</a>
+        </p>
     </footer>
 </body>
 </html>
