--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ href="https://webneko.net">Neko</a></h1>
                 <p>San Francisco, CA<p>
                 <p>Email: lenniermulder [at] icloud [dot] com</p>
         <p>Geek Code v3.12: GU d- s:- a?(---) C++ U+>++++ P L>+ E--- W++ N o? K w--- O? M++ V? PS++ PE- Y+ PGP? t 5 X?>+ R>+ tv+ b+>+++ DI(+) D+ G e- h! !r y</p>
-        <p>Swatch time:</p>
+        <p>Swatch time:
         <span id="mySwatchClock"></span>
         <script>
             var mySwatchClock = document.getElementById('mySwatchClock');
@@ -31,6 +31,7 @@ href="https://webneko.net">Neko</a></h1>
             }
             setInterval(updateSwatchClock, 864)
         </script>
+        </p>
         <p>I'm feeling<a href="https://www.imood.com/users/kirito139"><img src="https://moods.imood.com/display/uname-kirito139/fg-FFCC02/bg-282828/trans-1/imood.gif" alt="The current mood of kirito139 at www.imood.com" border="0"></a></p>
                 <p>Welcome to my little corner of the internet! Feel free to look around, it's pretty empty right now but I'll probably add more... eventually. This site was made with the help of a large dose of procrastination.</p>
                 <p> About me: I'm Class of '27 at Lowell HS, and I run on the XC/TF teams (though I'm currently dealing with shin splints <img style="display: inline;" alt="sigh" src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/smilies/purple_sigh.gif"> ). I code in python (preferred) and java.</p>
