--- a/index.html
+++ b/index.html
@@ -129,6 +129,12 @@ And the client exclaimed with a snarl and a taunt
             </p>
            <img usemap="#badge-geekring" src="http://geekring.net/banner/geek_2.gif" alt="The Geekring">
         </div>
+        <p> Cool sites!</p>
+        <div id="cool-sites">
+            <a href="https://tertiaryapocalypse.neocities.org">
+                <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/tertiaryapocalypse.png" alt="tertiaryapocalypse site button">
+            </a>
+        </div>
         <p>Buttons!</p>
         <div class="88x31">
             <!-- Anything But Windows -->
