Use amber theme, add site rating.

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@ href="https://webneko.net">Neko</a></h1>
         </p>
         <p>I'm feeling<a href="https://www.imood.com/users/kirito139"><img src="https://moods.imood.com/display/uname-kirito139/fg-FFCC02/bg-282828/trans-1/imood.gif" alt="The current mood of kirito139 at www.imood.com" border="0"></a></p>
                 <p>Welcome to my little corner of the internet! Feel free to look around, it's pretty empty right now but I'll probably add more... eventually. This site was made with the help of a large dose of procrastination.</p>
+                <p> This site rated: <a href="http://www.mabsland.com/Adoption.html">
+                    <img alt="Site not yet rated" src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/Censor_NYRc.gif">
+                </a></p>
                 <p> About me: I'm Class of '27 at Lowell HS, and I run on the XC/TF teams (though I'm currently dealing with shin splints <img style="display: inline;" alt="sigh" src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/smilies/purple_sigh.gif"> ). I code in python (preferred) and java.</p>
                 <img alt="Under heavy construction" src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/under_construction/pipipelinehalfpipe1038CONSTRUCTION.gif">
                 <pre>
